# CutCells

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: python-app.yml
benchmarks/: CMakeLists.txt  README.md  bench_cut_hex.cpp  bench_cut_mesh.cpp  bench_cut_tetrahedron.cpp  bench_cut_triangle.cpp
cpp/: CMakeLists.txt
cpp/demo/cut_2nd_order_tetrahedron/: CMakeLists.txt  main.cpp
cpp/demo/cut_2nd_order_triangle/: main.cpp
cpp/demo/cut_interval/: CMakeLists.txt  main.cpp
cpp/demo/cut_tetrahedron/: CMakeLists.txt  main.cpp
cpp/demo/cut_triangle/: CMakeLists.txt  main.cpp
cpp/src/: CMakeLists.txt  adapt_cell.cpp  adapt_cell.h  algoim_quadrature.cpp  algoim_quadrature.h  bernstein.cpp  bernstein.h  bernstein_backend.cpp  bernstein_backend.h  cell_certification.cpp  cell_certification.h  cell_flags.h  cell_subdivision.h  cell_topology.h  cell_types.h  curved_mesh.cpp  curved_mesh.h  curving.cpp  curving.h  cut_cell.cpp  cut_cell.h  cut_context.cpp  cut_context.h  cut_hexahedron.cpp  cut_hexahedron.h  cut_interval.cpp  cut_interval.h  cut_mesh.cpp  cut_mesh.h  cut_mesh_curved.cpp  cut_mesh_curved.h  cut_prism.cpp  cut_prism.h  cut_pyramid.cpp  cut_pyramid.h  cut_quadrilateral.cpp  cut_quadrilateral.h  cut_quadrilateral_old.cpp  cut_tetrahedron.cpp  cut_tetrahedron.h  (+61 more)
python/: CMakeLists.txt  pyproject.toml  requirements.txt  setup.py
python/cutcells/: __init__.py  mesh_utils.py  wrapper.cpp
python/demo/: bench_cut_pipeline.py  demo_level_set_ho_curved_vtk.py  demo_level_set_ho_vtk.py  demo_mesh_parts.py  demo_meshview.py  demo_meshview_ho_cut.py  demo_meshview_ho_cut_triangulated.py  demo_sphere_p2_cut_vtu.py  demo_two_level_sets.py  meshview_levelset_demo.py  plot_quadrilateral_cases.py
python/demo/cut_2nd_order_tetrahedron/: cut_tetrahedron.py
python/demo/cut_2nd_order_triangle/: cut_triangle.py
python/demo/cut_hexahedron/: cut_hexahedron_cases_subplots.py  cut_hexahedron_gyroid_thick.py  cut_hexahedron_n0.py
python/demo/cut_mesh_2D/: cut_mesh_2D.py
python/demo/cut_prism/: cut_prism_n0.py
python/demo/cut_pyramid/: cut_pyramid_n0.py
python/demo/cut_quadrilateral/: cut_quadrilateral.py  plot_quadrilateral_cases.py
python/demo/cut_tetrahedron/: cut_tetrahedron.ipynb  cut_tetrahedron.py
python/demo/cut_triangle/: cut_triangle.py
python/demo/cut_vtk_mesh/: cut_hex_mesh_3D.py  cut_hybrid_flower_2D.py  cut_mesh_2D.py  cut_mesh_3D.py  cut_popcorn_hex_mesh_3D.py  cut_quad_mesh_2D.py
python/demo/implicit_quadrature/: demo_implicit_quadrature_2D.py  demo_implicit_quadrature_3D.py
python/demo/local_mesh/: demo_local_mesh_bernstein_curved_cut.py  demo_local_mesh_curved_cut.py  demo_local_mesh_from_template.py  demo_local_mesh_interface_midpoint_projection.py  demo_single_cell_curved.py
python/demo/quadrature/: demo_quadrature_2D.py  demo_quadrature_3D.py
python/doc/source/: conf.py  index.rst  reference.rst
python/tests/: test_adaptcell_iso_refine.py  test_algoim_quadrature.py  test_basix_internal_ordering.py  test_certification_refinement.py  test_cut_mesh_parent_map_layout.py  test_cut_vtk_mesh_hexahedron_smoke.py  test_cut_vtk_mesh_prism_smoke.py  test_cut_vtk_mesh_pyramid_smoke.py  test_cut_vtk_mesh_termination.py  test_cut_vtk_mesh_triangulate_flag.py  test_cutcell_original_info.py  test_cutcontext_edge_reuse.py  test_geometric_quantity_header.py  test_graph_criteria_header.py  test_hex_classify.py  test_hex_emit.py  test_hex_polyhedron_export.py  test_hex_variant.py  test_hexahedron_special_point.py  test_ho_part_straight_output.py  test_implicit_quadrature.py  test_level_set_interpolate.py  test_level_set_mesh_data.py  test_level_set_vtu.py  test_local_mesh_template.py  test_mapping.py  test_mesh_utils.py  test_prism_special_point.py  test_pyramid_special_point.py  test_quad_table_sanity.py  test_quadrature.py  test_quadrilateral.py  test_quadrilateral_ambiguity.py  test_runtime_quadrature.py  test_single_corner.py  test_single_corner_basic.py  test_tables_cli.py  test_tangent_shift_header.py  test_tetra_triangulated_cut_edges.py  test_tetra_triangulation_analysis.py  (+3 more)
tablegen/cutcells_tablegen/: __init__.py  emit_c_headers.py  normalize.py  topology.py  vtk_tablebasedclip_parser.py  vtk_tables_import.py
tablegen/scripts/: gen_iso_refine_from_vtk.py  gen_quadrature_tables.py  gen_tables.py
tablegen/tools/: CMakeLists.txt  README_iso_refine_vtk.md  vtk_iso_refine_dump.cpp
